5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1764_1576.log
== TEST (2019-05-27 22:06:26) 
-- CODE:
from numpy import *
E = array(eval(input("eus치pia)))
B = array(eval(input("barsanulfo)))
print(E)
-- ERROR:
File "XXXX", line 2
    E = array(eval(input("eus치pia)))
                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:06:50) 
-- CODE:
from numpy import *
E = array(eval(input("eus치pia:")))
B = array(eval(input("barsanulfo:")))
print(E)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:07:57) 
-- CODE:
from numpy import *
E = array(eval(input("eus치pia:")))
B = array(eval(input("barsanulfo:")))
print(E)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:08:07) 
-- CODE:
from numpy import *
E = array(eval(input("eusapia:")))
B = array(eval(input("barsanulfo:")))
print(E)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:08:31) 
-- CODE:
from numpy import *
E = array(eval(input("eusapia:")))
B = array(eval(input("barsanulfo:")))
print(E)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:16:48) 
-- CODE:
from numpy import *
E = array(eval(int(input("eusapia:"))))
B = array(eval(int(input("barsanulfo:"))))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:17:31) 
-- CODE:
from numpy import *
E = array(eval(input("eusapia:")))
B = array(eval(input("barsanulfo:")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:54:14) 
-- CODE:
from numpy import *
E = array(eval(input("eusapia:")))
B = array(eval(input("barsanulfo:")))
ve = 0
vb = 0 
vetor = 0
while(vetor<size(E)):
	if((E[vetor]==11)and(B[vetor]==22)):
		vb=vb+1
	elif((E[vetor]==11)and(B[vetor]==33)):
		ve=ve+1
	elif((E[vetor]==22)and(B[vetor]==33)):
		vb=vb+1
	vetor=vetor+1
print(size(E))
	
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
elif(vb==ve):
	print("EMPATE")
print(size(E))

	
	
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:55:47) 
-- CODE:
from numpy import *
E = array(eval(input("eusapia:")))
B = array(eval(input("barsanulfo:")))
ve = 0
vb = 0 
vetor = 0
while(vetor<size(E)):
	if((E[vetor]==11)and(B[vetor]==22)):
		vb=vb+1
	elif((E[vetor]==11)and(B[vetor]==33)):
		ve=ve+1
	elif((E[vetor]==22)and(B[vetor]==33)):
		vb=vb+1
	vetor=vetor+1
print(size(E))
	
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
elif(vb==ve):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 00:05:23) 
-- CODE:
from numpy import *
E = array(eval(input("eusapia:")))
B = array(eval(input("barsanulfo:")))
ve = 0
vb = 0 
vetor = 0
while(vetor<size(E)):
	if((E[vetor]==11)and(B[vetor]==22)):
		vb=vb+1
	elif((E[vetor]==11)and(B[vetor]==33)):
		ve=ve+1
	elif((E[vetor]==22)and(B[vetor]==33)):
		vb=vb+1
	elif((E[vetor]==22)and(B[vetor]==11)):
		ve=ve+1
	elif((E[vetor]==33)and(B[vetor]==22)):
		ve=ve+1
	elif((E[vetor]==33)and(B[vetor]==11)):
		vb=vb+1
	
	vetor=vetor+1
print(size(E))
	
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
elif(vb==ve):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 00:05:39) 
-- CODE:
from numpy import *
E = array(eval(input("eusapia:")))
B = array(eval(input("barsanulfo:")))
ve = 0
vb = 0 
vetor = 0
while(vetor<size(E)):
	if((E[vetor]==11)and(B[vetor]==22)):
		vb=vb+1
	elif((E[vetor]==11)and(B[vetor]==33)):
		ve=ve+1
	elif((E[vetor]==22)and(B[vetor]==33)):
		vb=vb+1
	elif((E[vetor]==22)and(B[vetor]==11)):
		ve=ve+1
	elif((E[vetor]==33)and(B[vetor]==22)):
		ve=ve+1
	elif((E[vetor]==33)and(B[vetor]==11)):
		vb=vb+1
	
	vetor=vetor+1
print(size(E))
	
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
elif(vb==ve):
	print("EMPATE")
-- EXECUTION TIME:
0.539446
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
